# chessguyyy-spelling_bee

./: .env.example  .gitignore  account.html  account.js  accounts.json  audio_checker.py  auth.html  auth.js  check_audio.py  elo.py  game_logic.py  index.html  leaderboard.html  leaderboard.js  main.py  pyproject.toml  script.js  server.py  styles.css  templating.py  todo  todo.txt  wordchanger.py  wordlist.json
.github/workflows/: lint.yml
backend/: auth.py  db.py  errors.py  game.py  persistence.py  state.py
routes/: account.py  auth.py
static/: styles.css  sw.js
templates/: base.html  index.html
templates/fragments/: account.html  leaderboard.html  menu.html  menu_page.html  room.html
tests/: bench_argon2.py  check_audio.py
