[project]
name = "spellingbee"
version = "0.2.0"
description = "Spelling bee"
requires-python = ">=3.13"
dependencies = [
    "aiosqlite>=0.22.1",
    "fastapi[standard]>=0.135.3",
    "jinja2>=3.1.6",
    "python-multipart>=0.0.26",
    "sse-starlette>=3.3.4",
]

[project.optional-dependencies]
audio = ["mutagen>=1.47"]

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
# Require explicit selection of preview rules.
explicit-preview-rules = true
select = ["ALL"]
extend-select = ["ALL"]
extend-safe-fixes = ["ALL"]
extend-ignore = ["D", "N", "ANN"]
preview = true
